--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
   <body>
     <h1> Hello there, awesome person! </h1> 
     <img src="https://avatars1.githubusercontent.com/u/69416482?v=4">
+    <ol>
+      <li>Please Click
+        <a href="www.google.com">
+          Favourite1
+          </li>
+        <li>Please Click
+          <a href="www.facebook.com">
+            Favourite2
+            </li>
+          <li>Please Click
+            <a href="www.instagram.com">
+              Favourite3
+              </li>
   </body>
 
 </html>
