added lists with links

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
     <ol>
       <li>Please Click
         <a href="www.google.com">
-          Favourite1
+          Favourite1 </a>
           </li>
         <li>Please Click
           <a href="www.facebook.com">
-            Favourites2
+            Favourites2 </a>
             </li>
           <li>Please Click
             <a href="www.instagram.com">
-              Favourites3
+              Favourites3 </a>
               </li>
     </ol>
   </body>
