added css style link

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>My First Webpage </title>
-    <link rel="styleshhet" href="style.css">
+    <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
